added sliding animation to side-bar

--- a/side-nav/sideNav.html
+++ b/side-nav/sideNav.html
@@ -11,7 +11,7 @@
     ></script>
   </head>
   <body>
-    <div class="nav-btn" id="nav-btn"><i class="fa-solid fa-bars"></i></div>
+    <div class="nav-btn" id="nav-btn-container"><i id="nav-btn" class="fa-solid fa-bars"></i></div>
     <div class="nav" id="nav">
       <div class="close-btn" id="close-btn">
         <i class="fa-solid fa-xmark"></i>
